<resources>
    <string name="app_name">Online_exam</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="conpassword">Confirm Password</string>
    <string name="phone">Mobile No</string>
    <string name="login">LOG IN</string>
    <string name="enter">ENTER DETAILS</string>
    <string name="selectch">SELECT ALGORITHM TYPE</string>
    <string name="register">REGISTER</string>
    <string name="linear_regr">LINEAR REGRESSION</string>
    <string name="lc">LUNG CANCER</string>
    <string name="heartd">HEART DISEASE</string>
    <string name="switchon">SWITCH ON TO SELECT</string>
    <string-array name="famhist">
        <item>Present</item>
        <item>Absent</item>
    </string-array>

</resources>
